[gd_scene load_steps=9 format=2]

[ext_resource path="res://ui_assets/kenneyShadedDark/shadedDark35.png" type="Texture" id=1]
[ext_resource path="res://ui_assets/kenneyShadedDark/shadedDark33.png" type="Texture" id=2]
[ext_resource path="res://ui_assets/kenneyShadedDark/shadedDark16.png" type="Texture" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://ui_assets/images/2022-01-19-092511_389x478_scrot.png" type="Texture" id=5]
[ext_resource path="res://ui_assets/kenneyShadedDark/shadedDark12.png" type="Texture" id=6]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://fonts/m3x6.ttf"

[sub_resource type="DynamicFont" id=2]
size = 220
font_data = SubResource( 1 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 919.0
margin_bottom = 540.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 799.0
margin_bottom = 250.0
rect_min_size = Vector2( 0, 250 )
custom_fonts/font = SubResource( 2 )
text = "Run Robot, Run!"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 254.0
margin_right = 799.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="PlayButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 199.0
margin_right = 319.0
margin_bottom = 206.0
rect_min_size = Vector2( 120, 120 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderBoardButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 339.0
margin_right = 459.0
margin_bottom = 206.0
rect_min_size = Vector2( 120, 120 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 479.0
margin_right = 599.0
margin_bottom = 206.0
rect_min_size = Vector2( 120, 120 )
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 152, 424 )
scale = Vector2( 0.479434, 0.479434 )
texture = ExtResource( 5 )
